cabal-version:      2.4
name:               Project
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Moritz May
maintainer:         moritzmay@hotmail.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Sudoku

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ==4.*, ansi-terminal
    hs-source-dirs:   src
    default-language: Haskell2010

executable Project
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ==4.*,
		--14.3.0
        Project,
        --gloss,
        --gloss-raster,
        ansi-terminal

    hs-source-dirs:   app
    default-language: Haskell2010
